<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_foto"
        android:layout_centerHorizontal="true"
        app:civ_border_width="2dp"
        app:civ_border_color="#787F85"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/detail_nama"
        android:layout_below="@+id/detail_foto"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nama_user"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_username"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/detail_nama"
        android:textSize="16sp"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_company"
        android:textSize="18sp"
        android:text="@string/company"
        android:layout_below="@+id/detail_username"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ln"
        android:layout_below="@+id/detail_company"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_followers"
            android:textSize="16sp"
            android:text="@string/_1k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_followers"
            android:layout_marginLeft="20dp"
            android:text="@string/followers"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/detail_following"
            android:text="@string/_500"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_following"
            android:layout_marginLeft="20dp"
            android:text="@string/following"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/detail_location"
        android:text="@string/location"
        android:layout_below="@+id/ln"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_repositories"
        android:textSize="16sp"
        android:text="@string/_500"
        android:layout_below="@+id/detail_location"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_repositories"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/detail_repositories"
        android:text="@string/repositories"
        android:layout_below="@+id/detail_location"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>